# bevy_asset_loader

bevy_asset_loader/: Cargo.toml
bevy_asset_loader/examples/: progress_tracking.rs
bevy_asset_loader/src/: lib.rs
