[package]
name = "bevy_asset_loader"
version = "0.9.0-github.main"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy plugin for asset loading"
repository = "https://github.com/NiklasEi/bevy_asset_loader"
homepage = "https://github.com/NiklasEi/bevy_asset_loader"
documentation = "https://docs.rs/bevy_asset_loader"
keywords = ["bevy", "gamedev", "asset", "assets"]
categories = ["game-development"]
readme = "../README.md"

[features]
# This feature requires bevy's TextureAtlas and StandardMaterial assets to be available ("bevy/render")
render = ["bevy_asset_loader_derive/render"]
progress_tracking = ["bevy_progress_tracking"]

[dependencies]
bevy = { version = "0.6", default-features = false }
bevy_asset_loader_derive = { version = "=0.9.0-github.main", path = "../bevy_asset_loader_derive" }
#bevy_progress_tracking = { path = "../../bevy_progress_tracking", optional = true }
bevy_progress_tracking = { git = "https://github.com/NiklasEi/bevy_progress_tracking", optional = true }

[dev-dependencies]
bevy = { version = "0.6", features = ["vorbis"] }
trybuild = "1.0"

[[example]]
name = "two_collections"
path = "examples/two_collections.rs"

[[example]]
name = "atlas_from_grid"
path = "examples/atlas_from_grid.rs"
required-features = ["render"]

[[example]]
name = "init_resource"
path = "examples/init_resource.rs"

[[example]]
name = "dynamic_asset"
path = "examples/dynamic_asset.rs"

[[example]]
name = "no_loading_state"
path = "examples/no_loading_state.rs"

[[example]]
name = "progress_tracking"
path = "examples/progress_tracking.rs"
required-features = ["progress_tracking"]

[[example]]
name = "color_material"
path = "examples/standard_material.rs"
required-features = ["render"]
